--- a/section2 - 페이징/페이징.스크롤이동.html
+++ b/section2 - 페이징/페이징.스크롤이동.html
@@ -99,7 +99,8 @@
 
           //두번째 방법
           for(var i=0; i<totalNum; i++){
-            //console.log(i)
+            
+            //                              위에꺼 3분의 2지점        &&         밑에꺼의 [ 스크롤 값 < 섹션 맨 위 - 윈도우창 전체의(1/3) + 높이 ]
             if(scroll > section[i].offsetTop - window.outerHeight/3  && scroll < section[i].offsetTop - window.outerHeight/3 + section[i].offsetHeight){
               pageNum = i;
               //console.log(section[i].offsetHeight)
